140425 program section translated

--- a/public/locales/ar/home.json
+++ b/public/locales/ar/home.json
@@ -10,5 +10,27 @@
     "applyBtn": "تقدم اليوم",
     "timetableBtn": "جدول صلاة شهر يناير",
     "videoPlayBtn": "تشغيل الفيديو"
+  },
+  "programs": {
+    "heading1": "نقابل الأطفال حسب مستواهم <break />بغض النظر عن أعمارهم",
+    "heading2": "برامجنا",
+    "age": "العمر",
+    "weekly": "أسبوعيًا",
+    "time": "الوقت",
+    "years": "5-15 سنة",
+    "days": "2-4 أيام",
+    "hrs": "4-6 ساعات",
+    "program1": {
+      "title1": "قاعدة عربية، القرآن والحفظ",
+      "description1": "قال الله سبحانه وتعالى في القرآن: 'ورتل القرآن ترتيلاً'..."
+    },
+    "program2": {
+      "title2": "الرياضيات، الإنجليزية والعلوم",
+      "description2": "في أكاديمية اليقين لدينا مجموعة من المعلمين المتخصصين. يسعى معلمونا جاهدين إلى ..."
+    },
+    "program3": {
+      "title3": "اللغة العربية",
+      "description3": "الإسلام ليس مجرد دين يتبعه المسلمون، بل هو أسلوب حياة. عندما يولد الإنسان..."
+    }
   }
 }
