--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -10,5 +10,27 @@
     "applyBtn": "Apply Today",
     "timetableBtn": "January Prayer Timetable",
     "videoPlayBtn": "Play Video"
+  },
+  "programs": {
+    "heading1": "We meet kids at their level<break />regardless of their age",
+    "heading2": "Our Programs",
+    "age": "age",
+    "weekly": "weekly",
+    "time": "time",
+    "years": "5-15 years",
+    "days": "2-4 Days",
+    "hrs": "4-6 hrs",
+    "program1": {
+      "title1": "Arabic Qaidah, Quran & Hifdh",
+      "description1": "Allah swt the most says in the Quran : “and recite the Quran (aloud) in a s..."
+    },
+    "program2": {
+      "title2": "Maths, English & Science",
+      "description2": "At Alyaqeen academy we have a set of dedicated tutors. Our tutors try to en..."
+    },
+    "program3": {
+      "title3": "Arabic Language",
+      "description3": "Islam is just not religion that Muslims follow, but it is a way of life. When a person is born..."
+    }
   }
 }
