140425 workprocess and activities translated

--- a/public/locales/ar/home.json
+++ b/public/locales/ar/home.json
@@ -32,5 +32,23 @@
       "title3": "اللغة العربية",
       "description3": "الإسلام ليس مجرد دين يتبعه المسلمون، بل هو أسلوب حياة. عندما يولد الإنسان..."
     }
+  },
+  "workProcess": {
+    "title1": "الجلسات والمواعيد",
+    "description1": "تُعقد دروسنا الحضورية من الإثنين إلى الخميس خلال أيام الأسبوع، وفي يومي السبت والأحد خلال عطلة نهاية الأسبوع.",
+    "title2": "هيكل الرسوم",
+    "description2": "يعتمد هيكل الرسوم على نوع الدورة والجلسة. لدينا نوعان من الجلسات: أيام الأسبوع وعطلات نهاية الأسبوع.",
+    "title3": "العطل والتقويم الأكاديمي",
+    "description3": "تعتمد العطل والتقويم الأكاديمي على نوع الجلسة. لدينا نوعان من الجلسات: أيام الأسبوع وعطلات نهاية الأسبوع."
+  },
+  "whyChooseUs": {
+    "heading1": "الخيار الأفضل للأطفال",
+    "heading2": "لماذا تختارنا",
+    "feature1": "أدوات تعليمية حديثة",
+    "feature2": "مجموعات صغيرة، تركيز أفضل",
+    "feature3": "تحديثات منتظمة للتقدم",
+    "feature4": "تقارير فصلية للآباء",
+    "feature5": "تعليم القرآن مع التجويد",
+    "feature6": "بيئة ممتعة وودية"
   }
 }
