--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -32,5 +32,23 @@
       "title3": "Arabic Language",
       "description3": "Islam is just not religion that Muslims follow, but it is a way of life. When a person is born..."
     }
+  },
+  "workProcess": {
+    "title1": "Sessions & Timings",
+    "description1": "Our onsite classes are held Monday to Thursday on weekdays and on Saturday and Sunday during the weekends.",
+    "title2": "Fee Structure",
+    "description2": "Fee Structure depends on Course and Session types. We have two session: weekdays and weekends.",
+    "title3": "Holidays & Academic Calendar",
+    "description3": "Holidays & Academic Calendar will depend on Session types. We have two session: weekdays and weekends."
+  },
+  "whyChooseUs": {
+    "heading1": "Top Choice for Children",
+    "heading2": "WHY CHOOSE US",
+    "feature1": "Modern teaching tools",
+    "feature2": "Small groups, better focus",
+    "feature3": "Regular progress updates",
+    "feature4": "Termly reports for parents",
+    "feature5": "Quran taught with tajweed",
+    "feature6": "Fun & friendly environment"
   }
 }
