140425 staff and marquee translated

--- a/public/locales/ar/home.json
+++ b/public/locales/ar/home.json
@@ -132,5 +132,50 @@
         "endDuration5": "١٠ص - ١٢:٣٠م / ١٢:٣٠ - ٢:٣٠م"
       }
     }
+  },
+  "marquee": {
+    "text1": "حائز على جوائز",
+    "text2": "شهادات مرشحة",
+    "text3": "امتحان منتصف الفصل 2025"
+  },
+  "certificate": {
+    "category1": "الفئة 1",
+    "category2": "الفئة 2",
+    "category3": "الفئة 3"
+  },
+  "staff": {
+    "heading": "فريقنا",
+    "teamName1": "محمد خالد",
+    "teamPost1": "المدير العام والمعلم الرئيسي",
+
+    "teamName2": "الشيخ جنيد عثمان",
+    "teamPost2": "مدرس اللغة العربية والدراسات الدينية",
+
+    "teamName3": "حميد الله",
+    "teamPost3": "رئيس الدورات عبر الإنترنت",
+
+    "teamName4": "محمد سعد",
+    "teamPost4": "معلم",
+
+    "teamName5": "السيد جابر لودي",
+    "teamPost5": "مدرس المرحلة الأولى والثانية (KS1 و KS2)",
+
+    "teamName6": "محمد سليم",
+    "teamPost6": "مطور",
+
+    "teamName7": "نورين",
+    "teamPost7": "رئيسة قسم الإناث للغة العربية والقرآن الكريم",
+
+    "teamName8": "أبو جيش ختم أبو",
+    "teamPost8": "مدرس اللغة الإنجليزية والدراسات الإسلامية للمرحلتين الثالثة والثانوية (KS3 و GCSE)",
+
+    "teamName9": "أمينة أختر",
+    "teamPost9": "مدرسة الكيمياء والأحياء للمرحلتين الثالثة والثانوية (KS3 و GCSE)",
+
+    "teamName10": "حفصة خضر",
+    "teamPost10": "مدرسة كتاب العربية الأساسي والدراسات الدينية",
+
+    "teamName11": "حفصة أحمد",
+    "teamPost11": "مدرسة اللغة العربية"
   }
 }
