--- a/public/locales/ar/home.json
+++ b/public/locales/ar/home.json
@@ -177,5 +177,49 @@
 
     "teamName11": "حفصة أحمد",
     "teamPost11": "مدرسة اللغة العربية"
+  },
+  "testimonialOne": {
+    "heading1": "كلمات أولياء الأمور هي<<break />مفتاح سعادة الأطفال",
+    "heading2": "آراء وتوصيات"
+  },
+  "testimonialTwo": {
+    "heading1": "كلمات أولياء الأمور هي<break />مفتاح سعادة الأطفال",
+    "heading2": "آراء وتوصيات",
+    "testimonial1": {
+      "review1": "أُقدّر مرونة أكاديمية اليقين. طفلي يتعلم وفقًا لسرعته الخاصة، وهذا فعال جدًا.",
+      "author1": "أحمد علي المنصوري"
+    },
+    "testimonial2": {
+      "review2": "أنا منبهر بجودة التعليم المقدمة. طفلي أصبح أكثر تفاعلًا وتحفيزًا للتعلم.",
+      "author2": "فاطمة محمد الهاشمي"
+    },
+    "testimonial3": {
+      "review3": "أكاديمية اليقين توفر بيئة ودية، وفريق الدعم دائمًا متعاون. أوصي بها بشدة!",
+      "author3": "خالد عبد الله الزعابي"
+    },
+    "testimonial4": {
+      "review4": "أكاديمية اليقين غيّرت قواعد اللعبة في تعليم طفلي. المحتوى ممتع ومنظم بشكل جيد.",
+      "author4": "مريم سالم المهيري"
+    },
+    "testimonial5": {
+      "review5": "أكاديمية اليقين فاقت توقعاتي. إنها مزيج مثالي من التكنولوجيا والتعليم لطفلي.",
+      "author5": "عمر سيف النعيمي"
+    },
+    "testimonial6": {
+      "review6": "جعلت أكاديمية اليقين التعلم ممتعًا وتفاعليًا لطفلي. يمكنني رؤية ثقته بنفسه تنمو يومًا بعد يوم.",
+      "author6": "ليلى يوسف الكتبي"
+    },
+    "testimonial7": {
+      "review7": "تقارير التقدم مفصلة وسهلة الفهم. إنها تساعدني على متابعة أداء طفلي.",
+      "author7": "يوسف إبراهيم الشامسي"
+    },
+    "testimonial8": {
+      "review8": "لقد غيّر هذا النظام تجربة التعلم لطفلي! أوصي به بشدة! أفضل منصة لطفلي.",
+      "author8": "أحمد سعيد المنصوري"
+    },
+    "testimonial9": {
+      "review9": "منصة رائعة! أصبح ابني الآن يستمتع بالدراسة، ودرجاته تحسنت بشكل كبير. أنصح بها بشدة!",
+      "author9": "سعيد محمد الظاهري"
+    }
   }
 }
