140425 footer, blogs and services translated

--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -41,5 +41,37 @@
       "english": "الإنجليزية",
       "arabic": "العربية"
     }
+  },
+  "footer": {
+    "call": "اتصل بنا على مدار الساعة طوال الأسبوع",
+    "email": "البريد الإلكتروني",
+    "location": "الموقع",
+    "address": "116 طريق الكنيسة، ياردلي، برمنغهام، B25 8UX",
+    "slogan": "“أحد الأكاديميات الأكثر تفانيًا في ياردلي برمنغهام”",
+    "terms": "الشروط والأحكام",
+    "policy": "سياسة الخصوصية",
+    "quickLinks": {
+      "title1": "روابط سريعة",
+      "link1": "عن الأكاديمية",
+      "link2": "الأخبار",
+      "link3": "الصور والفيديوهات",
+      "link4": "التقويم الأكاديمي",
+      "link5": "اتصل بنا"
+    },
+    "categories": {
+      "title2": "الفئات",
+      "link6": "القاعدة، القرآن وحفظه",
+      "link7": "الرياضيات، اللغة الإنجليزية والعلوم",
+      "link8": "اللغة العربية",
+      "link9": "اللغات الأجنبية الحديثة"
+    },
+    "recentPosts": {
+      "title3": "المنشورات الأخيرة"
+    }
+  },
+
+  "director": {
+    "name": "محمد خالد",
+    "post": "المدير العام والمدير الرئيسي"
   }
 }
