--- a/public/locales/ar/home.json
+++ b/public/locales/ar/home.json
@@ -221,5 +221,68 @@
       "review9": "منصة رائعة! أصبح ابني الآن يستمتع بالدراسة، ودرجاته تحسنت بشكل كبير. أنصح بها بشدة!",
       "author9": "سعيد محمد الظاهري"
     }
+  },
+  "cta": {
+    "heading1": "انضم إلينا وكن جزءًا من <break /> دورتنا الأخيرة. <break /> التسجيلات مفتوحة.",
+    "heading2": "احصل على تعليمك المتميز",
+    "applyBtn": "قدّم الآن"
+  },
+  "blogs": {
+    "heading1": "استكشف المدونات والأخبار",
+    "heading2": "مدوناتنا",
+    "seeArticleBtn": "عرض جميع المقالات",
+    "bestTeacher": {
+      "title": "أفضل معلم لهذا الشهر",
+      "name": "الشيخ جُنيد عثمان",
+      "post": "اللغة العربية والدراسات الإسلامية",
+      "description": "الشيخ جنيد عثمان هو أفضل معلم لهذا الشهر، حيث يحرص دائمًا على الحضور قبل بدء الوقت وتنظيم الفصل وتجهيز كل شيء قبل وصول الأطفال، كما يساعد بعد انتهاء الدروس ويقوم بمناقشة أهمية اليوم مع المدير. نحن نُقدّر مساهمته وأفكاره."
+    },
+    "bestStudent": {
+      "title": "أفضل طالب لهذا الشهر",
+      "name": "جنيد قادر",
+      "post": "صف B5 - أيام الأسبوع",
+      "description": "طفل مميز، لم يتغيب طوال الشهر. دائمًا الأفضل في الصف، يحترم المعلمين والموظفين، ويعد من أكثر الطلاب دعمًا في مؤسسة اليقين."
+    }
+  },
+  "teacherOfTheYear": {
+    "name": "الشيخ مولانا جنيد عثمان",
+    "title": "لماذا تم اختياره كأفضل معلم لهذا العام",
+    "description": "مولانا جنيد عثمان هو أفضل معلم لهذا العام، حيث يحرص دائمًا على الحضور قبل بدء الوقت وتنظيم الفصل وتجهيز كل شيء قبل وصول الأطفال، كما يساعد بعد انتهاء الدروس ويقوم بمناقشة أهمية اليوم مع المدير. نحن نُقدّر مساهمته وأفكاره.",
+    "exploreBtn": "استكشف المزيد",
+    "skills": {
+      "one": "عالي التعليم",
+      "two": "معلّم ملتزم",
+      "three": "مرشد وموجه",
+      "four": "قائد مجتمعي",
+      "five": "يتحدث لغات متعددة",
+      "six": "ذو خبرة متعددة الجوانب",
+      "seven": "متفهم وداعم"
+    }
+  },
+  "instagram": {
+    "follow": "تابعنا على إنستغرام"
+  },
+  "services": {
+    "heading1": "خدمات إضافية من أكاديمية اليقين",
+    "heading2": "خدمات إضافية",
+    "AllServiceBtn": "جميع الخدمات",
+    "service1": {
+      "title1": "التعلم عبر الإنترنت",
+      "description1": "نعلم جميعًا التأثير الذي تركه كوفيد-19 على تعليم الأطفال..."
+    },
+    "service2": {
+      "title2": "النكاح",
+      "description2": "الشيخ خالد أجرى العديد من عقود النكاح خلال السنوات العشر الماضية..."
+    },
+    "service3": {
+      "title3": "نادي الرياضة",
+      "description3": "في أكاديمية اليقين، يلعب الطلاب كرة القدم. كما يوجد لدينا نادي كريكيت..."
+    }
+  },
+  "activities": {
+    "heading1": "دعونا نعرفكم عن قراءتنا وثقافتنا",
+    "heading2": "أفضل أنشطتنا",
+    "exploreBtn": "اكتشف المزيد",
+    "call": "اتصل بنا الآن"
   }
 }
