150425 about the founder page translated

--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -72,6 +72,23 @@
 
   "director": {
     "name": "محمد خالد",
-    "post": "المدير العام والمدير الرئيسي"
+    "post": "المدير العام والمدير الرئيسي",
+    "call": "اتصل بنا الآن"
+  },
+  "aboutMain": {
+    "title": "المدير العام و<break />رئيس المعلمين",
+    "subtitle": "الشيخ محمد خالد",
+    "mainPara": "السيد محمد خالد حبيب هو المدير العام ورئيس المعلمين في أكاديمية اليقين. لقد طوّر السيد خالد مهاراته التعليمية من خلال أكثر من 16 عامًا من الخبرة والتعلم. خلال هذه الفترة، أمضى ثلاث سنوات في الدراسات القرآنية، وسنتين في التجويد والقراءات. وقد أكمل برنامجًا شاملاً مدته أحد عشر عامًا في اللغة العربية والدراسات الإسلامية والشرعية.",
+    "para2": "حيث درس العلوم الإسلامية بما في ذلك اللغة العربية، والبلاغة، والمنطق، والحديث، وتفسير القرآن، والدراسات الشرعية الإسلامية في كراتشي، باكستان، والجامعة الإسلامية العالمية في إفريقيا، الخرطوم، السودان.",
+    "para3": "بعد ذلك، أمضى الأستاذ أيضًا 5 سنوات في تدريس اللغة العربية والدراسات الإسلامية والشرعية، و4 سنوات في مجال الصحافة حيث كتب وحرّر مقالات إسلامية وثقافية، وشارك في تأسيس مجلة شهرية معروفة في كراتشي. لديه سنوات من الخبرة في تدريس القرآن، التفسير، الحديث، الفقه، التجويد، اللغة العربية، كما عمل كإمام في معهد إسلامي محلي خلال السنوات الثماني الماضية.",
+    "para4": "كما أمّ صلاة التراويح في مختلف أنحاء العالم خلال السنوات الـ 25 الماضية بما في ذلك شهر رمضان المبارك. ولديه أيضًا 7 سنوات من الخبرة كإمام في إلقاء خطب العيد والجمعة. ويُعد السيد خالد عضوًا فعالًا في المجتمع المسلم.",
+    "para5": "يملك السيد خالد 10 سنوات من الخبرة في التدريس في مدرسة بريطانية تشمل أكاديميتين مستقلتين. وفي الآونة الأخيرة، يدير بنجاح العديد من الطلاب في أكاديمية اليقين التي تقدم تعليمًا في اللغة العربية، والقرآن، والدراسات الإسلامية، واللغة الإنجليزية، والعلوم، والرياضيات.",
+    "sportTitle": "برنامج رياضي",
+    "sportDescription": "البرنامج الرياضي يعزز <break /> المرح والنمو.",
+    "learnTitle": "سهل التعلم",
+    "learnDescription": "التعلم أصبح <break /> بسيطًا وسريعًا.",
+    "read": "اقرأ",
+    "more": "المزيد",
+    "less": "أقل"
   }
 }
